build/antlr4cpp_generated_src/head_interactor/head_interactorParser.cpp

// Generated from /home/oster/Electrolisys/grammar/head_interactor.g4 by ANTLR 4.13.1


#include "head_interactorListener.h"

#include "head_interactorParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct Head_interactorParserStaticData final {
  Head_interactorParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Head_interactorParserStaticData(const Head_interactorParserStaticData&) = delete;
  Head_interactorParserStaticData(Head_interactorParserStaticData&&) = delete;
  Head_interactorParserStaticData& operator=(const Head_interactorParserStaticData&) = delete;
  Head_interactorParserStaticData& operator=(Head_interactorParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag head_interactorParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
Head_interactorParserStaticData *head_interactorParserStaticData = nullptr;

void head_interactorParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (head_interactorParserStaticData != nullptr) {
    return;
  }
#else
  assert(head_interactorParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<Head_interactorParserStaticData>(
    std::vector<std::string>{
      "value_type", "comparator", "input", "line_input", "node_access", 
      "variable", "vardefinition", "comparision", "lhs_comp", "rhs_comp", 
      "expr_comp", "expr", "array", "input_array", "number", "constant", 
      "function", "multiargfunction", "rangefunction", "string"
    },
    std::vector<std::string>{
      "", "'('", "')'", "';'", "'VAR('", "':'", "'['", "']'", "'\"'", "", 
      "", "", "", "'>'", "", "'='", "", "'<'", "", "'+'", "'-'", "'*'", 
      "'/'", "'^'", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "'''"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "VARIABLE", "DATABASE", "WS", 
      "EOL", "LARGER", "LARGER_EQUAL", "EQUAL", "LESS", "LESS_EQUAL", "UINT", 
      "ADD", "SUB", "MUL", "DIV", "POW", "SUMPRODUCT", "SUMPRODUCT_I", "SUM", 
      "SUM_I", "PRODUCT", "PRODUCT_I", "LN", "LG", "LOG_X", "EXP", "SQRT", 
      "PI", "COS", "SIN", "ASIN", "ACOS", "FACTORIAL", "QUOTE", "ASTERISK", 
      "EXPONENT", "FLOAT", "ID_NUMBER", "STRING"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  head_interactorParserStaticData = staticData.release();
}

}

head_interactorParser::head_interactorParser(TokenStream *input) : head_interactorParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

head_interactorParser::head_interactorParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  head_interactorParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *head_interactorParserStaticData->atn, head_interactorParserStaticData->decisionToDFA, head_interactorParserStaticData->sharedContextCache, options);
}

head_interactorParser::~head_interactorParser() {
  delete _interpreter;
}

const atn::ATN& head_interactorParser::getATN() const {
  return *head_interactorParserStaticData->atn;
}

std::string head_interactorParser::getGrammarFileName() const {
  return "head_interactor.g4";
}

const std::vector<std::string>& head_interactorParser::getRuleNames() const {
  return head_interactorParserStaticData->ruleNames;
}

const dfa::Vocabulary& head_interactorParser::getVocabulary() const {
  return head_interactorParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView head_interactorParser::getSerializedATN() const {
  return head_interactorParserStaticData->serializedATN;
}


//----------------- Value_typeContext ------------------------------------------------------------------

head_interactorParser::Value_typeContext::Value_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

head_interactorParser::ArrayContext* head_interactorParser::Value_typeContext::array() {
  return getRuleContext<head_interactorParser::ArrayContext>(0);
}

head_interactorParser::ExprContext* head_interactorParser::Value_typeContext::expr() {
  return getRuleContext<head_interactorParser::ExprContext>(0);
}

head_interactorParser::StringContext* head_interactorParser::Value_typeContext::string() {
  return getRuleContext<head_interactorParser::StringContext>(0);
}


size_t head_interactorParser::Value_typeContext::getRuleIndex() const {
  return head_interactorParser::RuleValue_type;
}

void head_interactorParser::Value_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterValue_type(this);
}

void head_interactorParser::Value_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitValue_type(this);
}

head_interactorParser::Value_typeContext* head_interactorParser::value_type() {
  Value_typeContext *_localctx = _tracker.createInstance<Value_typeContext>(_ctx, getState());
  enterRule(_localctx, 0, head_interactorParser::RuleValue_type);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(43);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case head_interactorParser::T__5: {
        enterOuterAlt(_localctx, 1);
        setState(40);
        array();
        break;
      }

      case head_interactorParser::T__0:
      case head_interactorParser::T__3:
      case head_interactorParser::VARIABLE:
      case head_interactorParser::WS:
      case head_interactorParser::UINT:
      case head_interactorParser::ADD:
      case head_interactorParser::SUB:
      case head_interactorParser::SUMPRODUCT:
      case head_interactorParser::SUM:
      case head_interactorParser::SUM_I:
      case head_interactorParser::PRODUCT:
      case head_interactorParser::PRODUCT_I:
      case head_interactorParser::LN:
      case head_interactorParser::LG:
      case head_interactorParser::LOG_X:
      case head_interactorParser::EXP:
      case head_interactorParser::SQRT:
      case head_interactorParser::PI:
      case head_interactorParser::COS:
      case head_interactorParser::SIN:
      case head_interactorParser::ASIN:
      case head_interactorParser::ACOS:
      case head_interactorParser::FACTORIAL:
      case head_interactorParser::FLOAT: {
        enterOuterAlt(_localctx, 2);
        setState(41);
        expr(0);
        break;
      }

      case head_interactorParser::T__7: {
        enterOuterAlt(_localctx, 3);
        setState(42);
        string();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparatorContext ------------------------------------------------------------------

head_interactorParser::ComparatorContext::ComparatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* head_interactorParser::ComparatorContext::LARGER() {
  return getToken(head_interactorParser::LARGER, 0);
}

tree::TerminalNode* head_interactorParser::ComparatorContext::LARGER_EQUAL() {
  return getToken(head_interactorParser::LARGER_EQUAL, 0);
}

tree::TerminalNode* head_interactorParser::ComparatorContext::EQUAL() {
  return getToken(head_interactorParser::EQUAL, 0);
}

tree::TerminalNode* head_interactorParser::ComparatorContext::LESS() {
  return getToken(head_interactorParser::LESS, 0);
}

tree::TerminalNode* head_interactorParser::ComparatorContext::LESS_EQUAL() {
  return getToken(head_interactorParser::LESS_EQUAL, 0);
}


size_t head_interactorParser::ComparatorContext::getRuleIndex() const {
  return head_interactorParser::RuleComparator;
}

void head_interactorParser::ComparatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparator(this);
}

void head_interactorParser::ComparatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparator(this);
}

head_interactorParser::ComparatorContext* head_interactorParser::comparator() {
  ComparatorContext *_localctx = _tracker.createInstance<ComparatorContext>(_ctx, getState());
  enterRule(_localctx, 2, head_interactorParser::RuleComparator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 253952) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputContext ------------------------------------------------------------------

head_interactorParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<head_interactorParser::Line_inputContext *> head_interactorParser::InputContext::line_input() {
  return getRuleContexts<head_interactorParser::Line_inputContext>();
}

head_interactorParser::Line_inputContext* head_interactorParser::InputContext::line_input(size_t i) {
  return getRuleContext<head_interactorParser::Line_inputContext>(i);
}

tree::TerminalNode* head_interactorParser::InputContext::EOF() {
  return getToken(head_interactorParser::EOF, 0);
}


size_t head_interactorParser::InputContext::getRuleIndex() const {
  return head_interactorParser::RuleInput;
}

void head_interactorParser::InputContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInput(this);
}

void head_interactorParser::InputContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInput(this);
}

head_interactorParser::InputContext* head_interactorParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 4, head_interactorParser::RuleInput);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(53);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case head_interactorParser::T__3:
      case head_interactorParser::VARIABLE:
      case head_interactorParser::WS: {
        enterOuterAlt(_localctx, 1);
        setState(48); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(47);
          line_input();
          setState(50); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 2576) != 0));
        break;
      }

      case head_interactorParser::EOF: {
        enterOuterAlt(_localctx, 2);
        setState(52);
        match(head_interactorParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Line_inputContext ------------------------------------------------------------------

head_interactorParser::Line_inputContext::Line_inputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

head_interactorParser::VardefinitionContext* head_interactorParser::Line_inputContext::vardefinition() {
  return getRuleContext<head_interactorParser::VardefinitionContext>(0);
}

head_interactorParser::ComparisionContext* head_interactorParser::Line_inputContext::comparision() {
  return getRuleContext<head_interactorParser::ComparisionContext>(0);
}


size_t head_interactorParser::Line_inputContext::getRuleIndex() const {
  return head_interactorParser::RuleLine_input;
}

void head_interactorParser::Line_inputContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine_input(this);
}

void head_interactorParser::Line_inputContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine_input(this);
}

head_interactorParser::Line_inputContext* head_interactorParser::line_input() {
  Line_inputContext *_localctx = _tracker.createInstance<Line_inputContext>(_ctx, getState());
  enterRule(_localctx, 6, head_interactorParser::RuleLine_input);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(55);
      vardefinition();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(56);
      comparision();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Node_accessContext ------------------------------------------------------------------

head_interactorParser::Node_accessContext::Node_accessContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> head_interactorParser::Node_accessContext::WS() {
  return getTokens(head_interactorParser::WS);
}

tree::TerminalNode* head_interactorParser::Node_accessContext::WS(size_t i) {
  return getToken(head_interactorParser::WS, i);
}

std::vector<tree::TerminalNode *> head_interactorParser::Node_accessContext::UINT() {
  return getTokens(head_interactorParser::UINT);
}

tree::TerminalNode* head_interactorParser::Node_accessContext::UINT(size_t i) {
  return getToken(head_interactorParser::UINT, i);
}


size_t head_interactorParser::Node_accessContext::getRuleIndex() const {
  return head_interactorParser::RuleNode_access;
}

void head_interactorParser::Node_accessContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNode_access(this);
}

void head_interactorParser::Node_accessContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNode_access(this);
}

head_interactorParser::Node_accessContext* head_interactorParser::node_access() {
  Node_accessContext *_localctx = _tracker.createInstance<Node_accessContext>(_ctx, getState());
  enterRule(_localctx, 8, head_interactorParser::RuleNode_access);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(129);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == head_interactorParser::WS) {
        setState(59);
        match(head_interactorParser::WS);
        setState(64);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }

      setState(65);
      match(head_interactorParser::T__0);
      setState(69);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == head_interactorParser::WS) {
        setState(66);
        match(head_interactorParser::WS);
        setState(71);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(72);
      match(head_interactorParser::T__1);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(73);
      match(head_interactorParser::T__0);
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == head_interactorParser::WS) {
        setState(74);
        match(head_interactorParser::WS);
        setState(79);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(80);
      match(head_interactorParser::UINT);
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == head_interactorParser::WS) {
        setState(81);
        match(head_interactorParser::WS);
        setState(86);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(87);
      match(head_interactorParser::T__1);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(88);
      match(head_interactorParser::T__0);
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == head_interactorParser::WS) {
        setState(89);
        match(head_interactorParser::WS);
        setState(94);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(95);
      match(head_interactorParser::UINT);
      setState(99);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(96);
          match(head_interactorParser::WS); 
        }
        setState(101);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
      }
      setState(112);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == head_interactorParser::T__2) {
        setState(102);
        match(head_interactorParser::T__2);
        setState(106);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == head_interactorParser::WS) {
          setState(103);
          match(head_interactorParser::WS);
          setState(108);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(109);
        match(head_interactorParser::UINT);
        setState(114);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == head_interactorParser::WS) {
        setState(115);
        match(head_interactorParser::WS);
        setState(120);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(121);
      match(head_interactorParser::T__1);
      setState(126);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(123);
          match(head_interactorParser::WS); 
        }
        setState(128);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx);
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

head_interactorParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> head_interactorParser::VariableContext::WS() {
  return getTokens(head_interactorParser::WS);
}

tree::TerminalNode* head_interactorParser::VariableContext::WS(size_t i) {
  return getToken(head_interactorParser::WS, i);
}

tree::TerminalNode* head_interactorParser::VariableContext::VARIABLE() {
  return getToken(head_interactorParser::VARIABLE, 0);
}

tree::TerminalNode* head_interactorParser::VariableContext::DATABASE() {
  return getToken(head_interactorParser::DATABASE, 0);
}

head_interactorParser::Node_accessContext* head_interactorParser::VariableContext::node_access() {
  return getRuleContext<head_interactorParser::Node_accessContext>(0);
}


size_t head_interactorParser::VariableContext::getRuleIndex() const {
  return head_interactorParser::RuleVariable;
}

void head_interactorParser::VariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable(this);
}

void head_interactorParser::VariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable(this);
}

head_interactorParser::VariableContext* head_interactorParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 10, head_interactorParser::RuleVariable);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == head_interactorParser::WS) {
      setState(131);
      match(head_interactorParser::WS);
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(175);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case head_interactorParser::T__3: {
        setState(137);
        match(head_interactorParser::T__3);
        setState(165);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 20, _ctx)) {
        case 1: {
          setState(141);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(138);
            match(head_interactorParser::WS);
            setState(143);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(144);
          match(head_interactorParser::DATABASE);
          setState(145);
          match(head_interactorParser::VARIABLE);
          setState(149);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(146);
            match(head_interactorParser::WS);
            setState(151);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          break;
        }

        case 2: {
          setState(155);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(152);
            match(head_interactorParser::WS);
            setState(157);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(158);
          match(head_interactorParser::VARIABLE);
          setState(162);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(159);
            match(head_interactorParser::WS);
            setState(164);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          break;
        }

        default:
          break;
        }
        setState(167);
        match(head_interactorParser::T__1);
        setState(169);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx)) {
        case 1: {
          setState(168);
          node_access();
          break;
        }

        default:
          break;
        }
        break;
      }

      case head_interactorParser::VARIABLE: {
        setState(171);
        match(head_interactorParser::VARIABLE);
        setState(173);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx)) {
        case 1: {
          setState(172);
          node_access();
          break;
        }

        default:
          break;
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(180);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 24, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(177);
        match(head_interactorParser::WS); 
      }
      setState(182);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 24, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardefinitionContext ------------------------------------------------------------------

head_interactorParser::VardefinitionContext::VardefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* head_interactorParser::VardefinitionContext::EQUAL() {
  return getToken(head_interactorParser::EQUAL, 0);
}

tree::TerminalNode* head_interactorParser::VardefinitionContext::EOL() {
  return getToken(head_interactorParser::EOL, 0);
}

std::vector<tree::TerminalNode *> head_interactorParser::VardefinitionContext::WS() {
  return getTokens(head_interactorParser::WS);
}

tree::TerminalNode* head_interactorParser::VardefinitionContext::WS(size_t i) {
  return getToken(head_interactorParser::WS, i);
}

head_interactorParser::Value_typeContext* head_interactorParser::VardefinitionContext::value_type() {
  return getRuleContext<head_interactorParser::Value_typeContext>(0);
}

tree::TerminalNode* head_interactorParser::VardefinitionContext::VARIABLE() {
  return getToken(head_interactorParser::VARIABLE, 0);
}

tree::TerminalNode* head_interactorParser::VardefinitionContext::DATABASE() {
  return getToken(head_interactorParser::DATABASE, 0);
}

head_interactorParser::Node_accessContext* head_interactorParser::VardefinitionContext::node_access() {
  return getRuleContext<head_interactorParser::Node_accessContext>(0);
}


size_t head_interactorParser::VardefinitionContext::getRuleIndex() const {
  return head_interactorParser::RuleVardefinition;
}

void head_interactorParser::VardefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardefinition(this);
}

void head_interactorParser::VardefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<head_interactorListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardefinition(this);
}

head_interactorParser::VardefinitionContext* head_interactorParser::vardefinition() {
  VardefinitionContext *_localctx = _tracker.createInstance<VardefinitionContext>(_ctx, getState());
  enterRule(_localctx, 12, head_interactorParser::RuleVardefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(186);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == head_interactorParser::WS) {
      setState(183);
      match(head_interactorParser::WS);
      setState(188);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(227);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case head_interactorParser::T__3: {
        setState(189);
        match(head_interactorParser::T__3);
        setState(217);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 30, _ctx)) {
        case 1: {
          setState(193);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(190);
            match(head_interactorParser::WS);
            setState(195);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(196);
          match(head_interactorParser::DATABASE);
          setState(197);
          match(head_interactorParser::VARIABLE);
          setState(201);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(198);
            match(head_interactorParser::WS);
            setState(203);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          break;
        }

        case 2: {
          setState(207);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(204);
            match(head_interactorParser::WS);
            setState(209);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          setState(210);
          match(head_interactorParser::VARIABLE);
          setState(214);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == head_interactorParser::WS) {
            setState(211);
            match(head_interactorParser::WS);
            setState(216);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
          break;
        }

        default:
          break;
        }
        setState(219);
        match(head_interactorParser::T__1);
        setState(221);
        _errHandler->sync(this);
